2008-04-27  Hans Breuer  <hans@breuer.org>

	[ 
	  finally restores the feature to have different defaults for the same
	  object by 'intdata' in sheet file, e.g. Class and Template in UML.
	  Strange that I can't find any bug report related to this ;) 
	]
	* app/defaults.[hc] lib/object.h lib/object_defaults.c : pass user_data
	to dia_object_default_get(), although not using it yet. Remove unused
	function dia_object_default_make().
	(dia_object_default_create) : direct hashtable access to avoid 
	creating a default object for every object used. Only the default
	dialog created from double-clicking the tools toolbox icon creates
	a new default object now.
	* objects/GRAFCET/vergent.c objects/Istar/actor.c objects/Istar/goal.c
	  objects/Istar/link.c objects/Istar/other.c objects/Jackson/domain.c
	  objects/Jackson/phenomenon.c objects/KAOS/goal.c 
	  objects/KAOS/metaandorrel.c objects/KAOS/metabinrel.c
	  objects/UML/association.c objects/UML/component_feature.c : mark 
	properties modified by intdata/GPOINTER_TO_INT(user_data) as 
	PROP_FLAG_NO_DEFAULTS, thus they are no longer over-written by the
	object defauts system.

	* doc/custom-shapes : mention <default-width/> and <default-height/>
	* shapes/circuit/(h|v)*.shape : use them to have more recognizable
	shapes. Fixes bug #493237.

	* lib/prop_widgets.c : set the unfoldbutton to insensitive when
	invisible to stop propagating key events to it. Fixes bug #491028
	* objects/standard/(bezier|line|polyline).c : added 
	PROP_OFFSET_FRAME_BEGIN("gaps"), PROP_OFFSET_FRAME_END("gaps")
	to get symmetry between PropDescriptions and PropOffsets
	
	* lib/widgets.c : no more singned/unsigned mismatch and get rid of
	incompatible types - from 'struct _GtkWidget *' to 
	'struct _GtkFileSelection *', the DiaFileSelector::dialog is a
	GtkFileChooser for quite a long time

2008-04-26  Hans Breuer  <hans@breuer.org>

	* objects/UML/association.c : one more selfmade dialog gone, 
	'UML - Association' now use StdProps, too.
	